Adding the project files

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,11 +1,17 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+#nosql.nosqltype=cassandra
+nosql.cassandra.clusterName=TestCluster
+nosql.cassandra.keyspace= nosqlkeyspace
+nosql.cassandra.seeds= "localhost:9160"
+nosql.nosqltype=inmemory
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="F[Ld>I:cxMYTTsC266n7xG:EU/`s?D]=`kT0MK4GanI^y6HxqXYHjPF^VWA[PH[="
+application.secret="B25<r/D>M@2fDwOZt4qTfky3iXoCi:Omh;R2gpFt6fRhbRilmbj5FWeLNolE1Z7p"
 
 # The application languages
 # ~~~~~
